--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,120 @@
-#root {
-  
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
-.card {
+.NavigationBar{
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  padding: 20px;
   align-items: center;
   justify-content: center;
-  border: 1px solid white;
 }
 
-.read-the-docs {
-  color: #888;
+@media (min-width: 1025px) {
+  /* Styles for desktops */
+  #root {
+    width:90%;
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  .card {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    align-items: center;
+  }
+  
+  .formGroup{
+    display: flex;
+    width: 400px;
+    
+  }
+  
+  .read-the-docs {
+    color: #888;
+  }
+  
+  .select {
+    height: 50px;
+    width: 100%;
+    font-size: 20px;
+    border-radius: 5px;
+  }
+  
+  .NavigationButton{
+    border: 1px solid white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 30%;
+  }
+
+  .FiltersButton{
+    height:50px;
+    border: 1px solid white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 10%;
+  }
 }
+
+
+
+/* Mobile Devices (phones) */
+@media (max-width: 599px) {
+  /* Styles for phones */
+  .card {
+    margin:auto;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    align-items: center;
+  }
+
+  .select {
+    margin: auto;
+    height: 40px;
+    width: 90%;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
+  
+  .button{
+    border: 1px solid white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+
+/* Tablet Devices */
+@media (min-width: 600px) and (max-width: 1024px) {
+  .card {
+    margin:auto;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    align-items: center;
+  }
+
+  .select {
+    margin: auto;
+    height: 50px;
+    font-size: 23px;
+    width: 40%;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
+  
+  .NavigationButton{
+    border: 1px solid white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 40%;
+  }
+
+  .FiltersButton{
+    border: 1px solid white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 40%;
+  }
+
+}
+
+/* Desktop Devices */
