--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,33 @@
     margin-bottom: 10px;
     width: 10%;
   }
+  form{
+    width: 50%
+  }
+
+  .badge{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 120px;
+    height:40px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 1px solid transparent;
+    border-radius: 20px;
+  }
+
+  /* .badge:hover{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 120px;
+    height:40px;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+    transition: 0.25s;
+  } */
+
 }
 
 
