--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,10 @@
   
   .select {
     height: 50px;
-    width: 100%;
+    width: 15%;
     font-size: 20px;
     border-radius: 5px;
+    margin-bottom: 10px;
   }
   
   .NavigationButton{
